--- a/package.json
+++ b/package.json
@@ -14,21 +14,25 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
     "jshint": "^2.9.5",
     "live-server": "^1.2.0",
+    "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize-css": "^2.3.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.2.1",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "4.2.2",
+    "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
+    "uuid": "^3.2.1",
     "validator": "^9.4.0",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.5.1"
   }
 }
