--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "node-sass": "^4.7.2",
     "normalize-css": "^2.3.1",
     "react": "^16.2.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^16.3.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.2.1",
     "react-redux": "^5.0.7",
