--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack ",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "test": "jest --config=jest.config.json"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -37,5 +38,13 @@
     "validator": "^9.4.0",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.5.1"
+  },
+  "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
+    "jest": "^22.4.0",
+    "raf": "^3.4.0",
+    "react-test-renderer": "^16.2.0"
   }
 }
