Pruned for prod

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:dev": "webpack --env development",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
+
     "test": "jest --config=jest.config.json"
   },
   "dependencies": {
@@ -35,10 +36,12 @@
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "uuid": "^3.2.1",
     "validator": "^9.4.0",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack-dev-server": "^2.5.1",
+    "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
