--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Steve Sargent",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack ",
-    "dev-server": "webpack-dev-server",
+    "build:dev": "webpack --config webpack.dev.js",
+    "build:prod": "webpack --config webpack.prod.js",
+    "dev-server": "webpack-dev-server --config webpack.dev.js",
     "test": "jest --config=jest.config.json"
   },
   "dependencies": {
@@ -26,7 +27,7 @@
     "normalize-css": "^2.3.1",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.2",
-    "react-dates": "^16.3.0",
+    "react-dates": "16.3.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.2.1",
     "react-redux": "^5.0.7",
@@ -34,10 +35,12 @@
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "uuid": "^3.2.1",
     "validator": "^9.4.0",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack-dev-server": "^2.5.1",
+    "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
