--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:dev": "webpack --env development",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "heroku-postbuild":"npm run build:prod"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
