--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "license": "MIT",
   "author": "Steve Sargent",
   "scripts": {
-    "serve": "live-server public/",
     "start": "node server/server.js",
     "build:dev": "webpack --env development",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
-    "heroku-postbuild":"npm run build:prod"
+    "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -24,8 +23,6 @@
     "css-loader": "^0.28.9",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jshint": "^2.9.5",
-    "live-server": "^1.2.0",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize-css": "^2.3.1",
@@ -39,12 +36,9 @@
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
-    "uglifyjs-webpack-plugin": "^1.2.2",
     "uuid": "^3.2.1",
     "validator": "^9.4.0",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.5.1",
-    "webpack-merge": "^4.1.2"
+    "webpack": "^3.11.0"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
@@ -52,6 +46,7 @@
     "enzyme-to-json": "^3.3.1",
     "jest": "^22.4.0",
     "raf": "^3.4.0",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "webpack-dev-server": "^2.5.1"
   }
 }
