--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize-css": "^2.3.1",
+    "numeral": "^2.0.6",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "16.3.0",
