--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^0.28.9",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "firebase": "^4.10.1",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize-css": "^2.3.1",
@@ -35,6 +36,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "4.2.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "uuid": "^3.2.1",
