--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "webpack --env development",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
@@ -44,12 +44,15 @@
     "webpack": "^3.11.0"
   },
   "devDependencies": {
+    "cross-env": "^5.1.3",
+    "dotenv": "^5.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "jest": "^22.4.0",
     "raf": "^3.4.0",
     "react-test-renderer": "^16.2.0",
+    "redux-mock-store": "^1.5.1",
     "webpack-dev-server": "^2.5.1"
   }
 }
